--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Commit and push
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
+          git config user.name "helloSaltedCaramel"
+          git config user.email "12345678+helloSaltedCaramel@users.noreply.github.com"
           git add posts/ history.db || true
           git commit -m "자동 백업: $(date)" || echo "No changes"
           git push
